--- a/core/pawn-os.org
+++ b/core/pawn-os.org
@@ -1,3 +1,7 @@
+#+TITLE:OS Config
+#+OPTIONS: toc:2 num:nil ^:nil
+
+#+BEGIN_SRC emacs-lisp
 ;;; emacs --daemon으로 실행한 경우
 (defun linux-daemon-config ()
   (add-to-list 'default-frame-alist '(font . "Hack-12"))
@@ -10,7 +14,9 @@
                 (set-fontset-font "fontset-default"
                                   'japanese-jisx0208
                                   '("VL Gothic" . "unicode-bmp"))))))
+#+END_SRC
 
+#+BEGIN_SRC emacs-lisp
 (defun linux-config ()
   (set-frame-font "Hack-12" t)
   (set-fontset-font "fontset-default"
@@ -19,10 +25,10 @@
   (set-fontset-font "fontset-default"
                     'japanese-jisx0208
                     '("VL Gothic" . "unicode-bmp")))
+#+END_SRC
 
-
+#+BEGIN_SRC emacs-lisp
 (cond
  ((daemonp) (linux-daemon-config))
  ((eq system-type 'gnu/linux) (linux-config)))
-
-(provide 'graypawn-os)
+#+END_SRC
