disable smartparens-strict-mode

--- a/modules/pawn-cc.org
+++ b/modules/pawn-cc.org
@@ -30,8 +30,7 @@ sed -i 's/#! \/usr\/bin\/env python/#!\/usr\/bin\/env python2/' cclookup.py
   (setq comment-style 'extra-line)
   (setq comment-start "/*")
   (setq comment-end "*/")
-  (smartparens-mode)
-  (smartparens-strict-mode))
+  (smartparens-mode))
 
 (use-package cc-mode
   :defer t
