--- a/modules/pawn-ido.org
+++ b/modules/pawn-ido.org
@@ -19,6 +19,18 @@
           (lambda ()
             (define-key ido-completion-map (kbd "C-n") 'ido-next-match)
             (define-key ido-completion-map (kbd "C-p") 'ido-prev-match)))
+
+(use-package flx-ido
+  :ensure t
+  :init (flx-ido-mode 1))
+#+END_SRC
+
+#+BEGIN_SRC emacs-lisp
+(use-package smex
+  :ensure t
+  :bind* (("M-x" . smex)
+          ("M-X" . smex-major-mode-commands))
+  :config (smex-initialize))
 #+END_SRC
 
 #+BEGIN_SRC emacs-lisp
