--- a/modules/pawn-smartparens.org
+++ b/modules/pawn-smartparens.org
@@ -8,10 +8,11 @@
   :diminish smartparens-mode
   :init
   (setq sp-base-key-bindings 'paredit
-        sp-autoskip-closing-pair 'always
-        sp-hybrid-kill-entire-symbol nil)
+        sp-autoskip-closing-pair 'always)
   :config
   (sp-use-paredit-bindings)
-  (show-smartparens-global-mode +1))
-
+  (show-smartparens-global-mode +1)
+  (sp-pair "'" nil :actions :rem)
+  (sp-pair "\"" nil :actions :rem)
+  (sp-pair "`" nil :actions :rem))
 #+END_SRC
