--- a/modules/pawn-java.org
+++ b/modules/pawn-java.org
@@ -13,7 +13,9 @@ cp target/jdee-bundle-{{VERSION}}.jar ./
   :ensure t
   :defer t
   :init
-  (setq jdee-server-dir "~/.jdee-server"))
+  (setq jdee-server-dir "~/.jdee-server")
+  (setq jdee-build-function 'jdee-ant-build)
+)
 
 (use-package java-imports :ensure t)
 (use-package javadoc-lookup :ensure t)
@@ -25,8 +27,7 @@ jdee는 prj.el을 프로젝트 설정파일로 사용한다.
 #+BEGIN_EXAMPLE emacs-lisp
 (jdee-project-file-version "1.0")
 (jdee-set-variables
- '(jdee-build-function 'jdee-ant-build)
- '(jdee-ant-buildfile "/home/guilty/oata/build.xml"))
+ '(jdee-ant-buildfile "./build.xml"))
 #+END_EXAMPLE
 * Java Ant
 자바의 프로젝트 관리 도구인 Ant는 xml파일을 사용해 프로젝트를 정의한다. [1]
@@ -74,55 +75,58 @@ property를 정의하여 project의 디렉터리 구조를 정의한다.
 target은 Build를 수행할 경우 수행할 작업들을 정의한다.
 ** Sample
 #+BEGIN_SRC xml
-  <?xml version="1.0"?>
-  <project name="Hello" default="main" basedir=".">
-    <property name="build.dir" location="build"/>
-    <property name="classes.dir" location="${build.dir}/classes" />
-    <property name="jar.dir" location="${build.dir}/jar" />
-    <property name="src.dir" location="src"/>
-    <property name="lib.dir" location="lib"/>
+<?xml version="1.0"?>
+<project name="Hello" default="main" basedir=".">
+  <property name="build.dir" location="build"/>
+  <property name="classes.dir" location="${build.dir}/classes" />
+  <property name="jar.dir" location="${build.dir}/jar" />
+  <property name="src.dir" location="src"/>
+  <property name="lib.dir" location="lib"/>
 
-    <property name="main-class" value="oata.Hello" />
+  <property name="main-class" value="oata.Hello" />
 
-    <path id="project.classpath">
-      <pathelement location="${classes.dir}" />
-      <fileset dir="${lib.dir}">
-        <include name="*.jar" />
-      </fileset>
-    </path>
+  <path id="project.classpath">
+    <pathelement location="${classes.dir}" />
+    <fileset dir="${lib.dir}">
+      <include name="*.jar" />
+    </fileset>
+  </path>
 
-    <target name="clean" description="Clean output directories">
-      <delete dir="${build.dir}" />
-    </target>
+  <target name="clean" description="Clean output directories">
+    <delete dir="${build.dir}" />
+  </target>
 
-    <target name="compile">
-      <mkdir dir="${classes.dir}" />
-      <javac srcdir="${src.dir}"
-             destdir="${classes.dir}"
-             encoding="UTF-8"
-             includeantruntime="false">
-        <classpath refid="project.classpath" />
-      </javac>
-    </target>
+  <target name="compile">
+    <mkdir dir="${classes.dir}" />
+    <javac srcdir="${src.dir}"
+           destdir="${classes.dir}"
+           encoding="UTF-8"
+           includeantruntime="false">
+      <classpath refid="project.classpath" />
+    </javac>
+  </target>
 
-    <target name="jar" depends="compile">
-      <mkdir dir="${jar.dir}" />
-      <jar destfile="${jar.dir}/${ant.project.name}.jar" basedir="${classes.dir}">
-        <manifest>
-          <attribute name="Main-Class" value="${main-class}" />
-        </manifest>
-      </jar>
-    </target>
+  <target name="jar" depends="compile">
+    <mkdir dir="${jar.dir}" />
+    <jar destfile="${jar.dir}/${ant.project.name}.jar" basedir="${classes.dir}">
+      <manifest>
+        <attribute name="Main-Class" value="${main-class}" />
+      </manifest>
+    </jar>
+  </target>
 
-    <target name="run" depends="jar">
-      <java jar="${jar.dir}/${ant.project.name}.jar" fork="true" />
-    </target>
+  <target name="run" depends="jar">
+    <java jar="${jar.dir}/${ant.project.name}.jar" fork="true" />
+  </target>
 
-    <target name="rebuild" depends="clean,jar" />
-    <target name="main" depends="clean,run" />
+  <target name="rebuild" depends="clean,jar" />
+  <target name="main" depends="clean,run" />
 
-  </project>
+</project>
+
 #+END_SRC
+* MAVEN
+pom.xml을 통해 프로젝트를 관라한다.
 * Reference
 [[https://github.com/jdee-emacs/jdee-server][github:jdee]]
 [[http://futurismo.biz/archives/2675][コマンドラインから JUnit を使う方法]]
