--- a/modules/pawn-java.org
+++ b/modules/pawn-java.org
@@ -19,15 +19,6 @@ $ECLIPSE_HOME/eclimd
 #+BEGIN_SRC emacs-lisp
 (use-package eclim :ensure emacs-eclim
   :commands start-eclimd
-  :bind (("C-c C-e C-r" . eclim-run-class)
-         ;; problems
-         ("C-c C-e b b" . eclim-problems)
-         ("C-c C-e b o" . eclim-problems-open)
-         ("C-c C-e b n" . eclim-problems-next)
-         ("C-c C-e b p" . eclim-problems-previous)
-         ("C-c C-e b c" . eclim-problems-correct)
-         ;; find
-         ("M-." . eclim-java-find-declaration))
   :config
   (setq eclim-eclipse-dirs "/usr/lib/eclipse/")
   (setq eclim-executable "/usr/lib/eclipse/eclim")
@@ -39,10 +30,23 @@ $ECLIPSE_HOME/eclimd
 
   (setq-default eclimd-default-workspace "~/workspace/")
   (require 'eclimd)
-
   (require 'eclim-java)
+
+  ;; keybinding
+  (bind-key "C-c C-e C-r" 'eclim-run-class eclim-mode-map)
+  (bind-key "C-c C-e C-b" 'eclim-project-build eclim-mode-map)
+
+  (unbind-key "C-c C-e b" 'eclim-mode-map)
+  (bind-key "C-c C-e b b" 'eclim-problems eclim-mode-map)
+  (bind-key "C-c C-e b o" 'eclim-problems-open eclim-mode-map)
+  (bind-key "C-c C-e b n" 'eclim-problems-next eclim-mode-map)
+  (bind-key "C-c C-e b p" 'eclim-problems-previous eclim-mode-map)
+  (bind-key "C-c C-e b c" 'eclim-problems-correct eclim-mode-map)
+
+  (bind-key "M-." 'eclim-java-find-declaration eclim-mode-map)
+  (bind-key "M-," 'pop-tag-mark eclim-mode-map)
   (global-eclim-mode)
-)
+  )
 #+END_SRC
 
 #+BEGIN_EXAMPLE emacs-lisp
