--- a/core/pawn-utils.org
+++ b/core/pawn-utils.org
@@ -93,6 +93,19 @@
 (defun pawn/recenter-top ()
   (interactive)
   (recenter-top-bottom 0))
+
+(defun pawn/switch-buffer-scratch ()
+  "Switch to the scratch buffer. If the buffer doesn't exist,
+create it and write the initial message into it."
+  (interactive)
+  (let* ((scratch-buffer-name "*scratch*")
+         (scratch-buffer (get-buffer scratch-buffer-name)))
+    (unless scratch-buffer
+      (setq scratch-buffer (get-buffer-create scratch-buffer-name))
+      (with-current-buffer scratch-buffer
+        (lisp-interaction-mode)
+        (insert initial-scratch-message)))
+    (switch-to-buffer scratch-buffer)))
 #+END_SRC
 
 아래의 *prelude-* 로 시작하는 함수들은 [[https://github.com/bbatsov/prelude][prelude]] 에서 가져왔다.
