--- a/core/pawn-basic.org
+++ b/core/pawn-basic.org
@@ -132,6 +132,11 @@ whitespace 모드를 통해 안 좋은 공백을 시각화 한다.
 (ido-mode t)
 (ido-everywhere t)
 
+(add-hook 'ido-setup-hook
+          (lambda ()
+            (define-key ido-completion-map (kbd "C-n") 'ido-next-match)
+            (define-key ido-completion-map (kbd "C-p") 'ido-prev-match)))
+
 (use-package flx-ido
   :ensure t
   :init (flx-ido-mode 1))
