--- a/core/pawn-basic.org
+++ b/core/pawn-basic.org
@@ -134,8 +134,8 @@ whitespace 모드를 통해 안 좋은 공백을 시각화 한다.
 
 (add-hook 'ido-setup-hook
           (lambda ()
-            (define-key ido-completion-map (kbd "C-n") 'ido-next-match)
-            (define-key ido-completion-map (kbd "C-p") 'ido-prev-match)))
+            (define-key ido-completion-map (kbd "M-n") 'ido-next-match)
+            (define-key ido-completion-map (kbd "M-p") 'ido-prev-match)))
 
 (use-package flx-ido
   :ensure t
