--- a/core/pawn-keybindings.org
+++ b/core/pawn-keybindings.org
@@ -12,14 +12,8 @@
 ;; Switch to the scratch buffer
 (global-set-key (kbd "C-t s") 'pawn/switch-buffer-scratch)
 
-;; Start eshell or switch to it if it's active.
-(global-set-key (kbd "C-x m") 'eshell)
-
-;; Start a new eshell even if one is active.
-(global-set-key (kbd "C-x M") (lambda () (interactive) (eshell t)))
-
 ;; open an ansi-term buffer
-(global-set-key (kbd "C-x M-m") 'prelude-visit-term-buffer)
+(global-set-key (kbd "C-x C-t") 'prelude-visit-term-buffer)
 
 ;; If you want to be able to M-x without meta
 (global-set-key (kbd "C-x C-m") 'execute-extended-command)
